Always me, here git add .!

--- a/Funcionalidades HTML/list/list.html
+++ b/Funcionalidades HTML/list/list.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="list.css">
 </head>
 <body>
+    <!-- Referencia -->
+    <a href="http://https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element/ol"></a>
 
     <!--Para listas ordenadas tag "ol", para listas desordenadas tag "ul"
     para estilizar a "ul" usa-se "style="list-style-type:" e para estilizar
