--- a/Funcionalidades HTML/semantica/semantica.html
+++ b/Funcionalidades HTML/semantica/semantica.html
@@ -11,6 +11,11 @@
     <meta name="keywords" content="Html,CSS,Js"> 
 </head>
 <body>
+        <!-- Referencia -->
+        <a href="http://https://developer.mozilla.org/pt-BR/docs/Web/HTML/Element"></a>
+
+        <!-- Site para o validador de semantica -->
+        <a href="http://https://validator.w3.org/#validate_by_input"></a>
 
         <!-- Semantica para cabeçalho de uma pagina -->
         <header>
@@ -99,11 +104,5 @@
         email : carlositu33@gmail.com
         endereço : Rua lalala n-77
     </address>
-
-    
-
-
-
-
 </body>
 </html>
