--- a/Funcionalidades HTML/format/index.html
+++ b/Funcionalidades HTML/format/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Referencia -->
+    <a href="http://https://developer.mozilla.org/pt-BR/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals"></a>
+
     <!--SUBLINHADO-->
     <p><u>Estou falando com as pessoas !!!</u></p>
 
